--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
         "framer-motion": "^11.0.0",
         "lucide-react": "^0.544.0",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "react-markdown": "^10.1.0",
+        "remark-breaks": "^4.0.0",
+        "remark-gfm": "^4.0.1"
     },
     "devDependencies": {
         "@types/react": "^18.3.3",
