--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "dependencies": {
         "framer-motion": "^11.0.0",
         "lucide-react": "^0.544.0",
+        "prismjs": "^1.30.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-markdown": "^10.1.0",
+        "react-simple-code-editor": "^0.14.1",
         "remark-breaks": "^4.0.0",
         "remark-gfm": "^4.0.1"
     },
