--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "diff": "^8.0.2",
         "framer-motion": "^11.0.0",
         "lucide-react": "^0.544.0",
         "prismjs": "^1.30.0",
