--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "predev": "node scripts/buildCompressedArticles.mjs",
         "dev": "vite",
+        "prebuild": "node scripts/buildCompressedArticles.mjs",
         "build": "vite build",
+        "prebuild:inline": "node scripts/buildCompressedArticles.mjs",
         "build:inline": "vite build --mode inline --outDir dist-inline",
         "preview": "vite preview"
     },
