Refactor routing and remove social preview page. Update .gitignore to exclude generated social share pages. Adjust package scripts to build social share pages during predev and prebuild processes. Enhance AGENTS.md with detailed information on social embed generation.

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "predev": "node scripts/buildCompressedArticles.mjs",
+        "predev": "node scripts/buildCompressedArticles.mjs && node scripts/buildSocialSharePages.mjs",
         "dev": "vite",
-        "prebuild": "node scripts/buildCompressedArticles.mjs",
+        "prebuild": "node scripts/buildCompressedArticles.mjs && node scripts/buildSocialSharePages.mjs",
         "build": "vite build",
-        "prebuild:inline": "node scripts/buildCompressedArticles.mjs",
+        "prebuild:inline": "node scripts/buildCompressedArticles.mjs && node scripts/buildSocialSharePages.mjs",
         "build:inline": "vite build --mode inline --outDir dist-inline",
         "preview": "vite preview"
     },
