--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "predev": "node scripts/buildCompressedArticles.mjs && node scripts/buildSocialSharePages.mjs",
+        "predev": "node scripts/generateEmbedLogo.mjs && node scripts/buildCompressedArticles.mjs && node scripts/buildSocialSharePages.mjs",
         "dev": "vite",
-        "prebuild": "node scripts/buildCompressedArticles.mjs && node scripts/buildSocialSharePages.mjs",
+        "prebuild": "node scripts/generateEmbedLogo.mjs && node scripts/buildCompressedArticles.mjs && node scripts/buildSocialSharePages.mjs",
         "build": "vite build",
-        "prebuild:inline": "node scripts/buildCompressedArticles.mjs && node scripts/buildSocialSharePages.mjs",
+        "prebuild:inline": "node scripts/generateEmbedLogo.mjs && node scripts/buildCompressedArticles.mjs && node scripts/buildSocialSharePages.mjs",
         "build:inline": "vite build --mode inline --outDir dist-inline",
         "preview": "vite preview"
     },
@@ -25,11 +25,13 @@
         "remark-gfm": "^4.0.1"
     },
     "devDependencies": {
+        "@resvg/resvg-js": "^2.6.2",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.19",
         "postcss": "^8.4.39",
+        "sharp": "^0.34.4",
         "tailwindcss": "^3.4.7",
         "typescript": "^5.4.0",
         "vite": "^5.2.0"
