Enhance SMILES data handling by updating articles.json to include SMILES strings for various substances. Introduce a new script in package.json for generating SMILES mappings from OPSIN, and update AGENTS.md to document changes in drug_info structure. Additionally, improve Safari compatibility in the Header and AboutPage components by conditionally loading the logo based on browser detection.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build:inline": "vite build --mode inline --outDir dist-inline",
     "preview": "vite preview",
     "export:dose-table": "node scripts/exportDoseSpreadsheet.mjs",
+    "generate:smiles": "node scripts/generateSmilesMap.mjs",
     "merge:articles": "node scripts/merge-articles-json.mjs"
   },
   "dependencies": {
